# Itsme3

./: local.properties
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  ffmpeg_decoder.cpp  libyuv_wrapper.cpp
app/src/main/java/com/itsme/amkush/: FaceGateApplication.kt  MainHook.kt
app/src/main/java/com/itsme/amkush/ffmpeg/: FFmpegDecoder.kt
app/src/main/java/com/itsme/amkush/hooks/: AntiXposedHooks.kt  Camera1Hooks.kt  Camera2Hooks.kt  CameraXHooks.kt  ClonerBypassHooks.kt  DenyListHooks.kt  DeviceSpoofHooks.kt  EmulatorBypassHooks.kt  ExifSpoofHooks.kt  InjectionServiceClient.kt  RootBypassHooks.kt
app/src/main/java/com/itsme/amkush/ipc/: RemoteConfig.kt  UnixSocketServer.kt
app/src/main/java/com/itsme/amkush/libyuv/: LibYuv.kt
app/src/main/java/com/itsme/amkush/network/: ApiClient.kt
app/src/main/java/com/itsme/amkush/router/: SurfaceRouter.kt
app/src/main/java/com/itsme/amkush/services/: InjectionService.kt
app/src/main/java/com/itsme/amkush/ui/: FFmpegKitHelper.kt  HomeScreen.kt  PaymentScreen.kt  SplashScreenActivity.kt  StreamPreviewDialog.kt
app/src/main/java/com/itsme/amkush/ui/fragments/: MediaFragment.kt
app/src/main/java/com/itsme/amkush/utils/: ExternalConfig.kt  FileLoggingTree.kt  Logger.kt  SharedPrefs.kt
app/src/main/res/xml/: network_security_config.xml
